# LXEB

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  To-Do.md
CM_Config/: 00-Toolchains.cmake  01-Functions.cmake  05-PreConfig.cmake  10-LibraryHandler.cmake  LibraryHandler.cmake
Include/LXEB/: AppInfo.hpp  BrowsingProvider.hpp  CurlNetwork.hpp
Include/LXEB/API/: ProviderIntegrationEntry.h
Include/LXEB/Core/: Utils.hpp
Include/LXEB/LinuxApi/: LinuxInteractive.hpp
Include/LXEB/Lockdown/: VTHandler.hpp
Include/LXEB/Networking/: BrowsingProvider.hpp
Include/SEB/: ModuleInfo.hpp
Include/SEB/Integrity/: IIntegrityModule.hpp
Include/SEB/Logging/: ILogContent.hpp  ILogger.hpp  LogLevel.hpp
Include/SEB/Monitoring/: VirtualMachineDetector.hpp
Include/SEB/SystemComponents/: IRegistry.hpp  ISystemInfo.hpp
Installer/: LXEB.config.json  SourceInfo.cmake
Installer/src/: InstallerMain.cpp
Sources/Client/: App.cpp  SourceInfo.cmake
Sources/ClientSheet/: SourceInfo.cmake
Sources/Core/: Utils.cpp
Sources/Installer/: SourceInfo.cmake
Sources/Installer/src/: InstallerMain.cpp  Params.hpp
Sources/LXEB_API/: SourceInfo.cmake
Sources/LXEB_API/Lockdown/: VTHandler.cpp
Sources/LXEB_Main/: Main.cpp  SourceInfo.cmake
Sources/LXEB_Main/compositor/: LX_Compositor.cpp  LX_Compositor.hpp  LX_CompositorWindow.cpp  LX_CompositorWindow.hpp
Sources/LXEB_SafeExamBrowserModule/: SourceInfo.cmake
Sources/LinuxApi/: LinuxInteractive.cpp  SourceInfo.cmake
Sources/SystemComponents/: SourceInfo.cmake
cmake/: Functions.cmake
(+8 files in other folders)
